test/expected/typedef_cv_explain_ftd_v.out
explain void f(Void)
               ^
16: error: "void" parameters can not be "const"
